# config-weave

./: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  README.md  ansible-resource-survey.md  config-weave-pkgs-proposals.md  docker-compose.yml  justfile  wrangler.toml
.claude/skills/config-weave/: SKILL.md
.claude/skills/config-weave/reference/: cli.md  hostapi-windows.md  hostapi.md  packages.md  playbooks.md  scripts.md  testing.md  wisp-language.md  wisp-stdlib.md  wscript-language.md  wscript-stdlib.md
.claude/skills/config-weave/references/: cli_ref.md  concept_concurrency_classes.md  concept_container.md  concept_convergence_contract.md  concept_dag_scheduling.md  concept_editor_support.md  concept_gatherer.md  concept_host_api.md  concept_hostapi.md  concept_hostapi_windows.md  concept_idempotence.md  concept_package.md  concept_packages.md  concept_play.md  concept_playbook.md  concept_playbooks.md  concept_resource.md  concept_scenarios.md  concept_scripts.md  concept_step.md  concept_step_lifecycle.md  concept_test_grouping.md  concept_testing.md  concept_testlab.md  concept_three_run_protocol.md  concept_variables.md  concept_wscript_containers.md  concept_wscript_functions.md  concept_wscript_language.md  concept_wscript_loops.md  concept_wscript_memory_faults.md  concept_wscript_option_result.md  concept_wscript_overview.md  concept_wscript_pattern_matching.md  concept_wscript_reference_semantics.md  concept_wscript_stdlib.md  concept_wscript_structs_enums.md  concept_wscript_traits_operators.md  concept_wscript_values_types.md  concepts_ref.md  (+49 more)
.claude/skills/wdoc/references/: concept_styling.md
.github/workflows/: ci.yml  deploy-site.yml
.playwright-cli/: page-2026-07-10T13-20-11-219Z.yml  page-2026-07-10T13-21-34-341Z.yml  page-2026-07-10T13-21-45-045Z.yml  page-2026-07-10T13-22-05-683Z.yml  page-2026-07-10T13-22-50-344Z.yml  page-2026-07-10T13-23-23-731Z.yml  page-2026-07-10T13-23-39-690Z.yml  page-2026-07-10T13-23-58-025Z.yml  page-2026-07-10T13-24-00-725Z.yml  page-2026-07-10T13-24-38-935Z.yml  page-2026-07-10T13-25-05-184Z.yml  page-2026-07-10T13-25-29-354Z.yml  page-2026-07-10T13-25-53-047Z.yml  page-2026-07-10T13-26-14-934Z.yml  page-2026-07-10T13-29-59-711Z.yml  page-2026-07-10T13-30-01-805Z.yml  page-2026-07-10T13-30-04-392Z.yml  page-2026-07-10T13-32-32-706Z.yml  page-2026-07-10T13-32-34-799Z.yml  page-2026-07-10T13-32-37-382Z.yml  page-2026-07-10T14-13-00-042Z.yml  page-2026-07-10T14-13-03-753Z.yml  page-2026-07-10T14-13-06-341Z.yml  page-2026-07-10T14-13-36-375Z.yml  page-2026-07-10T14-13-39-556Z.yml  page-2026-07-10T14-14-14-178Z.yml  page-2026-07-10T14-14-16-765Z.yml  page-2026-07-10T14-14-40-570Z.yml  page-2026-07-10T14-14-43-648Z.yml  page-2026-07-10T14-14-46-843Z.yml  page-2026-07-10T14-15-50-634Z.yml  page-2026-07-10T14-15-52-731Z.yml  page-2026-07-10T14-25-03-768Z.yml  page-2026-07-10T14-25-07-472Z.yml  page-2026-07-10T14-48-04-915Z.yml  page-2026-07-10T14-48-54-992Z.yml  page-2026-07-10T14-48-56-429Z.yml  page-2026-07-10T14-48-58-559Z.yml  page-2026-07-10T14-49-01-685Z.yml
deploy/loki/: loki-config.yaml
deploy/prometheus/: prometheus.yml
docjson/: Cargo.toml
docjson/src/: docjson.rs  emit.rs  inspect_ast.rs  lib.rs
docs/: .gitignore  PRD.md  main.wcl  notes.md
docs/landing/: landing.css
docs/pages/config-weave/: features.wcl  getting-started.wcl  index.wcl  landing-parts.wcl
docs/wskills/config-weave/: .gitignore  justfile  wskill.wcl
docs/wskills/config-weave/data/: indexes.wcl  main.wcl
docs/wskills/config-weave/data/concept/: concurrency_classes.wcl  container.wcl  convergence_contract.wcl  dag_scheduling.wcl  editor_support.wcl  gatherer.wcl  host_api.wcl  idempotence.wcl  main.wcl  package.wcl  play.wcl  playbook.wcl  resource.wcl  scenarios.wcl  step.wcl  step_lifecycle.wcl  test_grouping.wcl  testlab.wcl  three_run_protocol.wcl  variables.wcl  wscript_containers.wcl  wscript_functions.wcl  wscript_loops.wcl  (+8 more)
docs/wskills/config-weave/schema/: kinds.wcl
pipeline/: Cargo.toml
pipeline/src/: auth.rs  exec.rs  main.rs  pipelines.rs  runs.rs  scheduler.rs  secrets.rs  state.rs  trigger.rs  webhooks.rs
pipeline/testdata/pipelines/: pipelines.wcl
server/: Cargo.toml  build.rs
server/src/: desktop.rs  main.rs  monitoring.rs  packages.rs  pipeline_proxy.rs  repos.rs  runbooks.rs  runs.rs  scheduler.rs  state.rs  sysruns.rs  systems.rs  term.rs  transport.rs  webhooks.rs  zips.rs
src/: convert.rs  diag.rs  docsgen.rs  logging.rs  main.rs  report.rs  scaffold.rs  vocab.rs
src/comdispatch/: mod.rs
src/engine/: dag.rs  events.rs  gather.rs  mod.rs  run.rs  scripts.rs  status.rs  vars.rs
src/hostapi/: archive.rs  com.rs  data.rs  env.rs  fs.rs  hash.rs  http.rs  log.rs  mod.rs  path.rs  registry.rs  service.rs  shell.rs  sys.rs  template.rs  testlab.rs  types.rs  windows_impl.rs
src/model/: emit.rs  inspect_ast.rs  load.rs  mod.rs  types.rs
src/pkgrepo/: git.rs  mod.rs  ops.rs  store.rs
src/testlab/: backend.rs  docker.rs  events.rs  mod.rs  output.rs  report.rs  runner.rs  synth.rs  vmlab.rs
src/vocab/: package.wcl  pipeline.wcl  playbook.wcl  repo.wcl  repos.wcl  services.wcl  systems.wcl
testdata/: repos.wcl  services.wcl
testdata/sample/: playbook.wcl
testdata/sample/pkgs/core/: package.wcl
tests/: authoring.rs  bootstrap.rs  output.rs  parallel.rs  pkg.rs  run.rs  spike.rs  testlab.rs  validate.rs
transport/: Cargo.toml
transport/src/: lib.rs
web-ui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web-ui/src/: App.tsx  api.ts  app.css  index.tsx  store.ts  wcl-language.ts
web-ui/src/components/: ActivityView.tsx  FileWorkspace.tsx  Login.tsx  PackageDocs.tsx  PackageView.tsx  PackagesView.tsx  PipelineRunView.tsx  PipelineView.tsx  PipelinesView.tsx  RepoSync.tsx  RunView.tsx  RunbookView.tsx  RunbooksView.tsx  ServiceLogs.tsx  ServiceMonitoring.tsx  ServicesView.tsx  Sidebar.tsx  SystemRunView.tsx  SystemsView.tsx  Topbar.tsx
web-ui/src/components/editor/: KeyValueEditor.tsx  PackageEditor.tsx  PlaybookEditor.tsx  PropertiesEditor.tsx  ValueInput.tsx
(+65 files in other folders)
