[package]
name = "config-weave"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Single-binary configuration management driven by WCL playbooks and wisp scripts"

[dependencies]
wcl_lang = { path = "../WCL/crates/wcl_lang" }
wisp = { path = "../wisp/wisp" }
wisp-std = { path = "../wisp/wisp-std" }

clap = { version = "4", features = ["derive"] }
petgraph = "0.8"
miette = { version = "7", features = ["fancy"] }
glob = "0.3"
tempfile = "3"
shell-words = "1"
ureq = "3"
sha2 = "0.10"
md-5 = "0.10"
zip = { version = "5", default-features = false, features = ["deflate", "deflate64", "bzip2", "lzma"] }
tar = "0.4"
flate2 = "1"
sysinfo = { version = "0.36", default-features = false, features = ["system"] }
tera = { version = "1", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Com",
  "Win32_System_Ole",
  "Win32_System_Variant",
  "Win32_System_Services",
  "Win32_System_Registry",
  "Win32_System_Threading",
] }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = "thin"
