# Workspace: the CLI (this package, the root) plus the web GUI server.
# `default-members` keeps plain `cargo build`/`cross build` on the CLI only,
# so the release flow never drags the server's async web stack along.
[workspace]
members = [".", "server", "docjson", "transport", "pipeline"]
default-members = ["."]

[package]
name = "config-weave"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Single-binary configuration management driven by WCL playbooks and wscript scripts"

[dependencies]
wcl_lang = { path = "../WCL/crates/wcl_lang" }
weave-docjson = { path = "docjson" }
wscript = { path = "../wscript/wscript" }
wscript-std = { path = "../wscript/wscript-std" }

clap = { version = "4", features = ["derive"] }
petgraph = "0.8"
miette = { version = "7", features = ["fancy"] }
glob = "0.3"
tempfile = "3"
shell-words = "1"
ureq = "3"
sha2 = "0.10"
md-5 = "0.10"
zip = { version = "5", default-features = false, features = ["deflate", "deflate64", "bzip2", "lzma"] }
tar = "0.4"
flate2 = "1"
sysinfo = { version = "0.36", default-features = false, features = ["system"] }
tera = { version = "1", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Com",
  "Win32_System_Ole",
  "Win32_System_Variant",
  "Win32_System_Services",
  "Win32_System_Registry",
  "Win32_System_Threading",
] }

[dev-dependencies]
tempfile = "3"

# Workspace-level (cargo warns if these sit in a member package's manifest).
[profile.release]
strip = true
lto = "thin"
