[package]
name = "weave-server"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Web GUI server for config-weave: runbook browsing/editing and live testlab runs"

[dependencies]
# The forge stack (path deps, same convention as ../WCL and ../wscript).
# term/vnc give us the widget engines + the WsStream adapter; the generic
# /api/term and /api/desktop/* endpoints stay unmounted — only the pinned
# per-instance routes below exist.
forge-server = { path = "../../forge/crates/forge-server", features = ["term", "vnc"] }
forge-core = { path = "../../forge/crates/forge-core", features = ["term", "vnc"] }

axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-embed = { version = "8", features = ["mime-guess"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
tempfile = "3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
http-body-util = "0.1"
