[package]
name = "weave-server"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Web GUI server for config-weave: runbook browsing/editing and live testlab runs"

[dependencies]
# The forge stack (path deps, same convention as ../WCL and ../wscript).
# term/vnc give us the widget engines + the WsStream adapter; the generic
# /api/term and /api/desktop/* endpoints stay unmounted — only the pinned
# per-instance routes below exist.
forge-server = { path = "../../forge/crates/forge-server", features = ["term", "vnc"] }
forge-core = { path = "../../forge/crates/forge-core", features = ["term", "vnc"] }

axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-embed = { version = "8", features = ["mime-guess"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
# systems.wcl store: schema-validated load + AST-built regeneration
# (same path-dep convention as the main crate's ../WCL).
wcl_lang = { path = "../../WCL/crates/wcl_lang" }
# package API docs: in-process package.wcl → PackageDoc extraction.
weave-docjson = { path = "../docjson" }
# shared ssh/winrm transport (direct-system runs; also used by the
# config-weave-pipeline daemon, so it lives in its own crate).
weave-remote = { path = "../transport" }
chrono = { version = "0.4", features = ["serde"] }
cron = "0.15"
# Prometheus /metrics + HTTP metrics layer; `metrics` must stay on the same
# minor as axum-prometheus's recorder or app metrics silently vanish.
axum-prometheus = "0.10"
metrics = "0.24"
# Loki push layer; caps reqwest <0.13, so the proxy client stays on 0.12
# to share one copy.
tracing-loki = { version = "0.2.7", default-features = false, features = ["compat-0-2-1", "rustls"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2"
# playbook download/upload archives (5.1 is already in the lockfile as a
# transitive dep, so this unifies at zero extra compile cost).
zip = { version = "5", default-features = false, features = ["deflate"] }
# webhook signature verification (GitHub/Gitea X-Hub-Signature-256).
hmac = "0.12"
sha2 = "0.10"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
http-body-util = "0.1"
