[package]
name = "weave-remote"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Shared ssh/winrm transport for config-weave (weave-server + config-weave-pipeline)"

[dependencies]
tokio = { version = "1", features = ["process", "io-util", "sync", "macros"] }
tempfile = "3"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
